--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,3 +1,18 @@
+version: 2
+
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "3.8"
+
+sphinx:
+  fail_on_warning: true
+
+
+formats:
+  - pdf
+  - epub
+
 python:
    install:
    - requirements: docs/requirements.txt
