--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,18 +1,18 @@
-version: 2
+# version: 2
 
-build:
-  os: "ubuntu-20.04"
-  tools:
-    python: "3.8"
+# build:
+#   os: "ubuntu-20.04"
+#   tools:
+#     python: "3.8"
 
-sphinx:
-  fail_on_warning: true
+# sphinx:
+#   fail_on_warning: true
 
 
-formats:
-  - pdf
-  - epub
+# formats:
+#   - pdf
+#   - epub
 
-python:
-   install:
-   - requirements: docs/requirements.txt
+# python:
+#    install:
+#    - requirements: docs/requirements.txt
