--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,17 +1,19 @@
-# version: 2
+version: 2
 
-# build:
-#   os: "ubuntu-20.04"
-#   tools:
-#     python: "3.8"
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "3.8"
 
-# sphinx:
-#   fail_on_warning: true
+sphinx:
+  builder: html
+  configuration: docs/conf.py
+  fail_on_warning: true
 
 
-# formats:
-#   - pdf
-#   - epub
+formats:
+  - pdf
+  - epub
 
 # python:
 #    install:
