path config sphinx

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,14 +7,12 @@ build:
 
 sphinx:
   builder: html
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
   fail_on_warning: true
-
 
 formats:
   - pdf
   - epub
-
 # python:
 #    install:
 #    - requirements: docs/requirements.txt
