update config doc

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # vscode
-.vs
+.vs/*
+.vs/settings.json
+.vs/tasks.json
+.vs/launch.json
+.vs/extensions.json
+.project
 
 # log
 *.log
+
+# build sphinx
+docs/build
