--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,14 +1,14 @@
 version: 2
 
 build:
-  os: "ubuntu-20.04"
+  os: "ubuntu-22.04"
   tools:
     python: "3.8"
 
 sphinx:
   builder: html
   configuration: docs/source/conf.py
-  fail_on_warning: true
+  fail_on_warning: false
 
 formats:
   - pdf
