--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # vscode
+.vscode/*
 .vs/*
 .vs/settings.json
 .vs/tasks.json
@@ -11,3 +12,6 @@
 
 # build sphinx
 docs/build
+
+#apps ETMI_Gui
+apps/ETMI_Gui/__pycache__
